# mimics

./: .dvcignore  .gitignore  .pre-commit-config.yaml  MLproject  README.md  commands.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg
.dvc/: config
data/: .gitignore  alpha.dvc  beta.dvc
mimics/: __init__.py  classifiers.py  datasets.py  experiments.py  extractors.py  features.py  load_weights.sh  types.py  utils.py  visualizers.py
mimics/experiments/: MLproject  __init__.py  base.py  commands.py  correlations.py  csp.py  draw_keypoints.py  experiment.py  gridsearch.py
mimics/transformers/: __init__.py  basic.py  basic_transformers.py  dataset_transformers.py  extractors.py  transformers.py
models/: .gitignore  dlib.dvc  landmark_detection.dvc
notebooks/: .gitignore  benchmark.ipynb.dvc  dataset_join.ipynb.dvc  patch_path.py  preprocessing.ipynb.dvc  tsfresh.ipynb.dvc
