[tool.poetry]
name = "mimics"
version = "0.1.0"
description = "Mimics disorder detection by exercises videos"
authors = ["Vladislav Goncharenko <vladislav.goncharenko@phystech.edu>"]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.20.1"
pandas = "^1.2.2"
matplotlib = "^3.3.4"
scikit-learn = "^0.23"
joblib = "^1.0.1"
torch = "^1.7.1"
torchvision = "^0.8.2"
dlib = "^19.21.1"
opencv-python = "^4.5.1"
mne = "^0.22.0"
pyriemann = "^0.2.6"
face-alignment = "^1.3.3"
mlflow = "^1.14.0"
landmark-detection = {git = "ssh://git@github.com/v-goncharenko/landmark-detection.git", rev = "v1.0"}

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.0"
fire = "^0.4.0"
dvc = "^1.11.16"
pre-commit = "^2.10.1"

[tool.black]
line-length = 90
target-version = ["py37"]
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
